kubernetes/study-app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: study-app
  labels:
    app.kubernetes.io/name: study-app
    app.kubernetes.io/part-of: opentelemetry-demo
spec:
  selector:
    app.kubernetes.io/name: study-app
  ports:
    - name: http
      port: 3001
      targetPort: 3001
  type: ClusterIP
